--- a/index.html
+++ b/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css" />
     <title>Stopwatch</title>
-  </head>
-  <body>
-    <h1>StopWatch</h1>
-    <div class="stopWatch">00: 00: 00</div>
-    <div class="btns">
-      <button class="playBtn"><i class="fa-solid fa-circle-play"></i></button>
-      <button class="stopBtn">
-        <i class="fa-solid fa-circle-stop"></i>
-      </button>
-    </div>
+</head>
+
+<body>
+    <h3 class="h3">StopWatch</h3>
+    <audio src="./Eminem - You Don't Know Official Music Video ft. 50 Cent, Cashis, Lloyd Banks.mp3"></audio>
+    <section>
+        <div class="stopWatch">00: 00: 00</div> <br><br>
+        <div class="btns">
+            <button class="playBtn"><i class="fa-solid fa-circle-play"></i></button>
+            <button class="stopBtn">
+                <i class="fa-solid fa-circle-stop"></i>
+            </button>
+        </div>
+    </section>
 
     <script src="./script.js"></script>
-  </body>
+    <!-- <script src="./doodle.js"></script> -->
+</body>
+
 </html>
